fix: Fixed integration-tests.yml